hard-gists/b72585771a9f606ad800/run.log
=== Docker Run Log for b72585771a9f606ad800 ===
Started at: Mi 29. Okt 19:31:41 CET 2025

[2025-10-29 19:31:41] START: Running container for b72585771a9f606ad800
[2025-10-29 19:31:42] SUCCESS: Container 9774da9753a111756c2c08b505569c6d71e29a2f64a624fd468bdb2ea84cda14 started for b72585771a9f606ad800
=== Container logs for b72585771a9f606ad800 ===
  File "/snippet.py", line 11
    print "Could not find FoundationPlist, are munkitools installed?"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for b72585771a9f606ad800 ===
[2025-10-29 19:31:44] INFO: Container 9774da9753a111756c2c08b505569c6d71e29a2f64a624fd468bdb2ea84cda14 has stopped
